Refactor replay into Spring Boot service