@@ -1,174 +1,129 @@
-# Matching Engine → Aeron Archive → Replay Lab
+# Aeron Archive Replay Service
 
-A Java 21/Maven reconstruction of a matching-event recording and downstream
-projection-recovery pipeline. It deliberately stays small: a deterministic
-single-threaded order book emits SBE messages through an Aeron
-`ExclusivePublication`; Aeron Archive records the stream; a consumer persists
-both its business sequence and Aeron byte position; and a bounded Archive
-replay restores the projection after a hard process crash.
+这是一个单体 Spring Boot 回放服务。它只负责协调和执行 Replay，不再把撮合引擎、
+事件生产方、Media Driver、Aeron Archive 和 Consumer 拆成仓库里的多个应用。
 
-> This repository is an independent educational reconstruction based on public Aeron APIs and the author's prior exposure to matching-engine replay work. It does not contain or claim to reproduce proprietary OKX source code or confidential architecture.
+> 本项目是基于公开 Aeron API 的独立示例，不包含、也不声称复现 OKX 私有源码或机密架构。
 
-## What the demo proves
-
-The one-command demo establishes this bounded reliability statement:
-
-> A consumer that crashes after durably checkpointing an Aeron stream position can recover the missing matching events from Aeron Archive and converge to the same projection state as uninterrupted consumption.
-
-The proof checks all of the following:
-
-- the live consumer terminates via `Runtime.halt(77)` after sequence 4000;
-- its checkpoint contains sequence 4000 and the post-fragment
-  `Header.position()`;
-- the engine continues publishing and waits for the Archive recording position;
-- replay starts at that saved Aeron position, not at position zero;
-- recovered business sequences are continuous and have no duplicate business
-  effects;
-- the recovered deterministic FNV-1a state hash equals the uninterrupted
-  reference hash written by the engine.
-
-Run it from PowerShell:
-
-```powershell
-.\scripts\run-demo.ps1
-```
-
-Build and unit/integration test independently:
-
-```powershell
-.\mvnw.cmd clean verify
-```
-
-The demo performs a `clean install` because the foreground helper scripts
-execute individual Maven modules from the local reactor artifacts.
-
-## Architecture in one page
+## 生产边界
 
 ```text
-SyntheticOrderFeed
-  -> single-threaded price/time-priority OrderBook
-  -> MatchingEvent
-  -> build-generated SBE Encoder + Agrona UnsafeBuffer
-  -> Aeron ExclusivePublication (aeron:ipc, stream 1001)
-       -> live Projection Consumer
-       -> Aeron Archive Recording (the matching Event Log)
-            -> bounded startReplay(checkpointPosition, length)
-            -> replay Subscription (stream 1002)
-            -> recovered Projection
+┌──────────────────────── 上游系统 ────────────────────────┐
+│ Matching / Event Service                                │
+│   └─ SBE MatchingEvent ──> Aeron ──> Aeron Archive      │
+└─────────────────────────────┬────────────────────────────┘
+                              │ recordingId + Position
+                              ▼
+┌──────────────────── Aeron Replay Service ────────────────┐
+│ POST /api/v1/replays                                     │
+│   └─ ReplayJobManager（异步、同 checkpointKey 串行）      │
+│       └─ AeronReplayCoordinator                          │
+│           ├─ 连接外部 Media Driver / Archive             │
+│           ├─ 按 recordingId + Position 有界回放           │
+│           ├─ SBE 解码、eventSequence gap/duplicate 检查   │
+│           └─ 原子更新 Checkpoint、校验最终状态哈希         │
+└──────────────────────────────────────────────────────────┘
 ```
 
-Only `ArchiveNodeMain` launches a Media Driver. Every other process is an Aeron
-client connected to the same directory.
-
-## Aeron, Archive, and the Event Log
-
-**Aeron is transport.** A Publication, Media Driver, and Subscription move
-messages with low latency. A successful `publication.offer()` means Aeron
-accepted the message and returned a new stream position.
-
-**Aeron Archive is durable recording and replay.** In this project, the Archive
-Recording itself is the append-only Matching Event Log; there is no parallel
-text-file or custom journal pretending to be the log. Before the engine exits,
-it polls until the recording position reaches the final publication position.
-
-These are four different milestones:
+仓库现在只有一个 Maven artifact 和一个可部署进程：
 
 ```text
-transport accepted -> Archive recorded -> consumer applied -> consumer checkpointed
+aeron-replay-service-1.0.0-SNAPSHOT.jar
 ```
 
-The configured Archive file/catalog sync level is 1 for the learning demo.
-Production durability semantics still depend on filesystem, device, operating
-system, and deployment guarantees.
+用于启动 `ArchivingMediaDriver` 和测试事件 Publisher 的夹具只存在于 `src/test`，
+不会进入生产 JAR，也不会由服务代码调用。
 
-## Replay is not re-matching
+## 快速开始
 
-The `OrderBook` is the matching core's in-memory state. The `ProjectionState`
-is downstream derived state. Replay reads already-recorded matching events and
-rebuilds the projection; it does not regenerate synthetic orders and does not
-call the order book again. This MVP does not recover the matching engine's own
-order-book state.
+要求 Java 21。构建并运行全部测试：
 
-## Business sequence versus Aeron position
+```powershell
+.\scripts\build.ps1
+```
 
-`eventSequence` is a consecutive business identifier (`1, 2, 3...`) used for
-gap detection and idempotency. Aeron position is a byte position affected by
-frame headers, alignment, padding, MTU, and fragmentation; it is not an event
-count.
+连接已经运行的 Media Driver / Aeron Archive：
 
-The checkpoint atomically saves both:
+```powershell
+.\scripts\run-service.ps1 `
+  -AeronDirectory "D:\aeron\driver" `
+  -CheckpointDirectory ".\runtime\checkpoints" `
+  -Port 8080
+```
+
+启动一次回放：
+
+```powershell
+.\scripts\start-replay.ps1 `
+  -RecordingId 42 `
+  -CheckpointKey "orders-projection" `
+  -StopPosition 1349472 `
+  -ExpectedLastEventSequence 12425 `
+  -ExpectedStateHash "18013645834701933210" `
+  -CorrelationId "incident-20260802"
+```
+
+查询任务：
+
+```powershell
+Invoke-RestMethod http://localhost:8080/api/v1/replays/{jobId}
+Invoke-RestMethod http://localhost:8080/api/v1/replays
+Invoke-RestMethod http://localhost:8080/actuator/health
+```
+
+## 回放请求语义
+
+`recordingId` 是必填项，服务绝不会自行猜测 Recording。`checkpointKey` 标识一份
+独立的恢复状态；同一 key 同时只能有一个回放任务。
+
+- 已有 Checkpoint：从 `lastAppliedAeronPosition` 继续。
+- 没有 Checkpoint：从 Recording 的 `startPosition` 开始，业务序列预期从 1 开始。
+- 未传 `stopPosition`：任务开始时快照当前 `recordingPosition`/`stopPosition`。
+- 传入期望序列或哈希：完成后校验，不匹配时状态为 `VERIFICATION_FAILED`。
+- 回放异常：状态为 `FAILED`，Checkpoint 仍停留在最后一次原子写入的位置。
+
+Checkpoint 同时保存：
 
 ```properties
+recordingId=42
+lastAppliedAeronPosition=434080
 lastAppliedEventSequence=4000
-lastAppliedAeronPosition=...
+stateHash=...
 ```
 
-The consumer checkpoints the `Header.position()` after successful application.
-Archive replay begins at that end position, so the next event should be 4001.
+业务 `eventSequence` 用于检测 gap 和抑制重复；Aeron Position 用于定位 Archive
+字节流，两者不能互相替代。
 
-## At-least-once behavior
-
-Crashing after applying an event but before replacing the checkpoint can cause
-that event to be delivered again. The projection therefore applies:
+## 目录
 
 ```text
-sequence == last + 1 -> apply
-sequence <= last     -> suppress duplicate
-sequence > last + 1  -> fail immediately on gap
+src/main/java/.../
+  api/            REST 请求、响应和错误契约
+  application/    异步任务生命周期与并发控制
+  aeron/          Archive 客户端和有界回放
+  checkpoint/     原子 Checkpoint 持久化
+  codec/          SBE 编解码适配
+  config/         Spring Boot 外部化配置
+  domain/         回放事件领域模型
+  projection/     幂等应用、序列和哈希状态
+
+src/main/resources/
+  application.yml
+  sbe/matching-events.xml
+
+src/test/
+  真实 ArchivingMediaDriver 和上游 Publisher 测试夹具
 ```
 
-The main demo starts at an exact post-event checkpoint and requires zero
-duplicates. A real-Archive integration test intentionally replays from one
-position earlier and proves that the duplicate changes neither the projection
-hash nor its business effects.
+更详细的说明：
 
-## Project layout
+- [架构与服务边界](docs/architecture.md)
+- [REST API 契约](docs/api.md)
+- [部署与运维](docs/operations.md)
+- [原始多进程 MVP 指南（历史参考）](docs/reference/original-mvp-guide.md)
 
-| Module | Responsibility |
-|---|---|
-| `replay-domain` | Orders, events, enums, deterministic hashing |
-| `replay-codec` | SBE XML schema, generated codecs, adapters/dispatch |
-| `orderbook-engine` | Price-time-priority book and deterministic feed |
-| `aeron-infrastructure` | Archive node, publication, checkpoints, replay |
-| `matching-engine-app` | Engine process |
-| `projection-consumer-app` | Live consumer and hard crash |
-| `replay-coordinator-app` | Bounded position replay and verification |
-| `replay-integration-tests` | Real ArchivingMediaDriver record/replay tests |
+## 当前范围
 
-Generated SBE sources live under
-`replay-codec/target/generated-sources/sbe` and are never hand-edited.
-
-## Useful commands
-
-```powershell
-.\scripts\clean-data.ps1
-.\scripts\build.ps1
-.\scripts\run-archive.ps1
-.\scripts\run-consumer-crash.ps1
-.\scripts\run-engine.ps1
-.\scripts\run-replay.ps1
-.\scripts\inspect-archive.ps1
-```
-
-Run the Archive script in one terminal and the consumer/engine/replay scripts
-in the order shown in [docs/demo-runbook.md](docs/demo-runbook.md).
-
-All JVMs need:
-
-```text
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
---add-opens java.base/java.util.zip=ALL-UNNAMED
-```
-
-The scripts supply these through `MAVEN_OPTS`.
-
-## Scope boundary and future work
-
-This MVP does not solve the window in which the in-memory order book changes
-but the matching event has not yet been accepted by the Aeron Publication.
-Closing that window needs a command log, synchronous journal, Aeron Cluster, or
-a more complete persisted matching state machine.
-
-Future work, intentionally not implemented here: `ReplayMerge`, live catch-up
-and merge, snapshots plus replay, order-book recovery, replicated Archive,
-multi-symbol partitioning, CPU affinity, latency histograms, and chaos testing.
+服务实现的是从 Archive 恢复下游投影的核心机制，不负责重新撮合，也不恢复撮合
+引擎自身的 OrderBook。生产接入时可将 `ProjectionState` 替换为实际业务 Handler，
+但必须保留 Position Checkpoint、业务序列幂等和有界回放语义。
